<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <angelo.itl.arduinoairqualitymonitor.util.graphic.TableFixHeaders
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/between" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@android:color/transparent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/collapse_bottom_background"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:shadowColor="@color/grey_500"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="4"
                    android:text="@string/search_register"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/data_to_search_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_to_search"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/data_to_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/white"
                        android:hint="@string/insert_data"
                        android:inputType="numberDecimal"
                        android:textColor="@color/grey_800"
                        android:textColorLink="@color/cyan_800" />

                    <Button
                        android:id="@+id/clear_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cyan_700"
                        android:text="@string/clear_field" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_filter"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cyan_800">

                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_filter"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/filter_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cyan_800" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_by"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/filter_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cyan_800" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/order_by_criterion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_by_criterion"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/filter_order_criterion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cyan_800" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/show_all_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/cyan_800"
                    android:drawableTint="@color/cyan_800"
                    android:text="@string/show_all_data" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_close_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_margin="@dimen/floating_button_margin"
                android:src="@drawable/ic_arrow_up_bold"
                app:backgroundTint="@color/cyan_700"
                app:fabSize="normal" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_go_to_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/floating_button_margin"
        android:alpha="100"
        android:src="@drawable/ic_arrow_down_bold"
        app:backgroundTint="@color/between_500"
        app:fabSize="normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_go_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginRight="@dimen/floating_button_margin"
        android:layout_marginTop="40dp"
        android:alpha="100"
        android:src="@drawable/ic_arrow_up_bold"
        app:backgroundTint="@color/between_500"
        app:fabSize="normal" />-->
</android.support.design.widget.CoordinatorLayout>
